samples/_failures_safe/1761258630_342011_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44f4012d.c: In function ‘main’:
./samples/SAFE/__tmp_44f4012d.c:147:5: error: ‘execute’ undeclared (first use in this function)
  147 |     execute
      |     ^~~~~~~
./samples/SAFE/__tmp_44f4012d.c:147:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_44f4012d.c:147:12: error: expected ‘;’ at end of input
  147 |     execute
      |            ^
      |            ;
./samples/SAFE/__tmp_44f4012d.c:147:5: error: expected declaration or statement at end of input
  147 |     execute
      |     ^~~~~~~
